# fy

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt.old  HELP.md  LICENSE  README.md  STYLE.md  style.md
doc/: Doxyfile.in
include/: ai.h
res/: gwc-ai4financialgood-logo.png~
src/: ai.cpp  main  main.cpp  openai_api_key_test.sh  test.cpp
